# docs/swagger.json
@@ -713,6 +713,320 @@
                     }
                 }
             }
+        },
+        "/reorder/allget": {
+            "get": {
+                "description": "Get all Return Order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ReturnOrder"
+                ],
+                "summary": "Get Return Order",
+                "operationId": "Allget-ReturnOrder",
+                "responses": {
+                    "200": {
+                        "description": "Get All",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/api.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/entity.ReturnOrder"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "not found endpoint",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/reorder/create": {
+            "post": {
+                "description": "Create a new order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ReturnOrder"
+                ],
+                "summary": "Create Order",
+                "operationId": "Create-ReturnOrder",
+                "parameters": [
+                    {
+                        "description": "ReturnOrder Data",
+                        "name": "CreateReturnOrder",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreateReturnOrder"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "ReturnOrder Created",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/api.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/request.CreateReturnOrder"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/reorder/delete/{returnID}": {
+            "delete": {
+                "description": "Delete an order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ReturnOrder"
+                ],
+                "summary": "Delete Order",
+                "operationId": "delete-ReturnOrder",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Return ID",
+                        "name": "returnID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ReturnOrder Deleted",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/api.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "204": {
+                        "description": "No Content, Order Delete Successfully",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Order Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/reorder/getbyID/{returnID}": {
+            "get": {
+                "description": "Get details of an order by its return id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ReturnOrder"
+                ],
+                "summary": "Get Return Order by ID",
+                "operationId": "GetByID-ReturnOrder",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Return ID",
+                        "name": "returnID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Get by ID",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/api.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/entity.ReturnOrder"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "not found endpoint",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/reorder/update/{returnID}": {
+            "put": {
+                "description": "Update an existing return order using returnID in the path",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ReturnOrder"
+                ],
+                "summary": "Update Order",
+                "operationId": "Update-ReturnOrder",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Return ID",
+                        "name": "returnID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Updated Order Data",
+                        "name": "order",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UpdateReturnOrder"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ReturnOrder Updated Successfully",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Order Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -847,6 +1161,68 @@
                 }
             }
         },
+        "entity.ReturnOrder": {
+            "type": "object",
+            "properties": {
+                "axStatusId": {
+                    "type": "integer"
+                },
+                "cancelId": {
+                    "type": "integer"
+                },
+                "channelId": {
+                    "type": "integer"
+                },
+                "checkBy": {
+                    "type": "string"
+                },
+                "createBy": {
+                    "type": "string"
+                },
+                "createDate": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "optStatusId": {
+                    "type": "integer"
+                },
+                "orderNo": {
+                    "type": "string"
+                },
+                "platfId": {
+                    "type": "integer"
+                },
+                "platfStatusId": {
+                    "type": "integer"
+                },
+                "remark": {
+                    "type": "string"
+                },
+                "returnId": {
+                    "type": "string"
+                },
+                "saleOrder": {
+                    "type": "string"
+                },
+                "saleReturn": {
+                    "type": "string"
+                },
+                "statusCheckId": {
+                    "type": "integer"
+                },
+                "trackingNo": {
+                    "type": "string"
+                },
+                "updateBy": {
+                    "type": "string"
+                },
+                "updateDate": {
+                    "type": "string"
+                }
+            }
+        },
         "entity.SubDistrict": {
             "type": "object",
             "properties": {
@@ -914,6 +1290,77 @@
                 }
             }
         },
+        "request.CreateReturnOrder": {
+            "type": "object",
+            "properties": {
+                "ReturnOrderLine": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/request.ReturnOrderLine"
+                    }
+                },
+                "axStatusId": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "cancelId": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "channelId": {
+                    "type": "integer",
+                    "example": 2
+                },
+                "checkBy": {
+                    "type": "string",
+                    "example": "dev03"
+                },
+                "description": {
+                    "type": "string",
+                    "example": ""
+                },
+                "optStatusId": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "orderNo": {
+                    "type": "string",
+                    "example": "ORD0001"
+                },
+                "platfId": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "platfStatusId": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "remark": {
+                    "type": "string",
+                    "example": ""
+                },
+                "returnId": {
+                    "type": "string",
+                    "example": "RID0001"
+                },
+                "saleOrder": {
+                    "type": "string",
+                    "example": "SO0001"
+                },
+                "saleReturn": {
+                    "type": "string",
+                    "example": "SR0001"
+                },
+                "statusCheckId": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "trackingNo": {
+                    "type": "string",
+                    "example": "12345678TH"
+                }
+            }
+        },
         "request.LoginLark": {
             "type": "object",
             "properties": {
@@ -961,6 +1408,27 @@
                 }
             }
         },
+        "request.ReturnOrderLine": {
+            "type": "object",
+            "properties": {
+                "checkQTY": {
+                    "type": "integer",
+                    "example": 5
+                },
+                "price": {
+                    "type": "number",
+                    "example": 199.99
+                },
+                "returnQTY": {
+                    "type": "integer",
+                    "example": 5
+                },
+                "sku": {
+                    "type": "string",
+                    "example": "SKU12345"
+                }
+            }
+        },
         "request.UpdateOrderRequest": {
             "type": "object",
             "properties": {
@@ -991,6 +1459,71 @@
                 "custSubDistrict": {
                     "type": "string",
                     "example": "Bang-Plad"
+                }
+            }
+        },
+        "request.UpdateReturnOrder": {
+            "type": "object",
+            "properties": {
+                "axStatusId": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "cancelId": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "channelId": {
+                    "type": "integer",
+                    "example": 2
+                },
+                "checkBy": {
+                    "type": "string",
+                    "example": "dev03"
+                },
+                "description": {
+                    "type": "string",
+                    "example": ""
+                },
+                "optStatusId": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "orderNo": {
+                    "type": "string",
+                    "example": "ORD0001"
+                },
+                "platfId": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "platfStatusId": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "remark": {
+                    "type": "string",
+                    "example": ""
+                },
+                "returnId": {
+                    "type": "string",
+                    "example": "RID0001"
+                },
+                "saleOrder": {
+                    "type": "string",
+                    "example": "SO0001"
+                },
+                "saleReturn": {
+                    "type": "string",
+                    "example": "SR0001"
+                },
+                "statusCheckId": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "trackingNo": {
+                    "type": "string",
+                    "example": "12345678TH"
                 }
             }
         }
